--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,15 +11,9 @@ body, html {
 body {
     background-color: #88B9DC;
 
-}
-
-body > div {
-    
-    height: 100%;
-
     display: flex;
-    flex-direction: column;
 
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -32,6 +26,7 @@ body > div {
     
     left: 0px;
     right: 0px;
+    top: 0px;
 
     text-transform: uppercase;
 
