--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -23,6 +23,13 @@
     justify-content: space-between;
 }
 
+h2 {
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 35px;
+}
+
 body {
     justify-content: center;
     align-items: center;
