Wordsset-editor page layout

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,3 +36,19 @@ body {
     font-size: 35px;
     text-transform: uppercase;
 }
+
+input, button {
+    border: 0px;
+}
+
+input[type="submit"], button {
+    cursor: pointer;
+}
+
+.enumeration:nth-child(2n) {
+    background-color: #FFACAC;
+}
+
+.enumeration:nth-child(2n + 1) {
+    background-color: #FFCCCC;
+}
