--- a/assets/css/wordsset-editor.css
+++ b/assets/css/wordsset-editor.css
@@ -25,6 +25,11 @@
     background-color: white;
 
     padding: 15px;
+
+    height: 200px;
+
+    overflow-y: scroll;
+    resize: vertical;
 }
 
 .words-container p {
