--- a/assets/css/accounts-management.css
+++ b/assets/css/accounts-management.css
@@ -6,20 +6,24 @@
 
 }
 
+.acсounts-management-panel * {
+    font-size: 32px;
+}
+
 .search, .account {
     padding: 5px 30px;
 
 }
 
 .account {
-    width: 100%;
-
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+
+    color: black;
+
+    text-align: center;
 }
 
-.acсounts-management-panel * {
-    font-size: 32px;
-
+.name {
+    text-align: center;
 }
